move to java17, fix Dockerfile